--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,8 +1,1 @@
-<ol class="list-unstyled row">
-    <li *ngFor="let photo of photos" class="col-4">
-        <app-photo   [alt]="photo.description" 
-                     [img]="photo.url">
-        </app-photo>
-    </li>
-</ol>
-
+<app-photos [photos]="photos" ></app-photos>
