--- a/src/app/photos/photo-list/photos/photos.component.html
+++ b/src/app/photos/photo-list/photos/photos.component.html
@@ -1,10 +1,10 @@
 <ol class="list-unstyled">
-  <li *ngFor="let row of rows" class="row">
-      <div *ngFor="let photos of photo" class="col-4">
-          <app-photo   [alt]="photo.description" 
-                    [img]="photo.url">
-          </app-photo>
-      </div>
-  </li>
+    <li *ngFor="let cols of rows" class="row">
+        <div *ngFor="let photo of cols" class="col-4">
+            <ap-photo 
+                [url]="photo.url" 
+                [description]="photo.description">
+            </ap-photo>
+        </div>
+    </li>
 </ol>
-
