--- a/src/app/home/signin/signin.component.html
+++ b/src/app/home/signin/signin.component.html
@@ -7,21 +7,19 @@
             class="form-control" 
             placeholder="user name" 
             autofocus>  
-        <small *ngIf="loginForm.get('userName').errors?.required"
-                class="text-danger d-block mt-2">
-                User name is required!
-        </small>        
+           <ap-vmessage text="User name is required!"
+                *ngIf="loginForm.get('userName').errors?.required" >
+            </ap-vmessage>      
     </div>
 
     <div class="form-group">
         <input formControlName="password"
             type="password" 
             class="form-control" 
-            placeholder="password">    
-        <small *ngIf="loginForm.get('password').errors?.required"
-                class="text-danger d-block mt-2">
-                Password is required!
-        </small>              
+            placeholder="password">   
+            <ap-vmessage text=" Password is required!"
+                *ngIf="loginForm.get('password').errors?.required" >
+            </ap-vmessage>                  
     </div>
 
     <button 
