ViewChild: obtendo referências do template

--- a/src/app/home/signin/signin.component.html
+++ b/src/app/home/signin/signin.component.html
@@ -3,7 +3,7 @@
 <form [formGroup]="loginForm" class="form mt-4" (submit)="login()" >
 
     <div class="form-group">
-        <input formControlName="userName"
+        <input formControlName="userName" #userNameInput
             class="form-control" 
             placeholder="user name" 
             autofocus>  
@@ -17,7 +17,7 @@
             type="password" 
             class="form-control" 
             placeholder="password">   
-            <ap-vmessage text=" Password is required!"
+            <ap-vmessage text=" Password is required!" #userNameInput
                 *ngIf="loginForm.get('password').errors?.required" >
             </ap-vmessage>                  
     </div>
