--- a/src/app/home/signin/signin.component.html
+++ b/src/app/home/signin/signin.component.html
@@ -1,33 +1,38 @@
 <h4 class="text-center">Login</h4>
 
-<form [formGroup]="loginForm" class="form mt-4" (submit)="login()" >
+<form [formGroup]="loginForm" class="form mt-4" (submit)="login()">
 
     <div class="form-group">
-        <input formControlName="userName" #userNameInput
+        <input #userNameInput
+            formControlName="userName" 
             class="form-control" 
             placeholder="user name" 
-            autofocus>  
-           <ap-vmessage text="User name is required!"
-                *ngIf="loginForm.get('userName').errors?.required" >
-            </ap-vmessage>      
+            autofocus>
+        <ap-vmessage 
+            *ngIf="loginForm.get('userName').errors?.required"
+            text="User name is required!">
+        </ap-vmessage>        
     </div>
 
     <div class="form-group">
-        <input formControlName="password"
+        <input
+            formControlName="password" 
             type="password" 
             class="form-control" 
-            placeholder="password">   
-            <ap-vmessage text=" Password is required!" #userNameInput
-                *ngIf="loginForm.get('password').errors?.required" >
-            </ap-vmessage>                  
+            placeholder="password">
+        <ap-vmessage
+            *ngIf="loginForm.get('password').errors?.required"
+            text="Password is required!">
+        </ap-vmessage>               
     </div>
 
-    <button  
-        type="submit" [disabled]="loginForm.invalid"
+    <button 
+        [disabled]="loginForm.invalid" 
+        type="submit" 
         class="btn btn-primary btn-block">
         login
     </button>
 
 </form>
 
-<p>Not a user? <a>Register now</a></p>
+<p>Not a user?<a>Register now</a></p>
