--- a/src/app/core/header/header/header.component.html
+++ b/src/app/core/header/header/header.component.html
@@ -1,9 +1,15 @@
 <header class="sticky-top">
     <nav class="navbar navbar-light bg-white">
         <a class="navbar-brand">ALURAPIC</a>
-        <div>
+        <div *ngIf="(user$ | async) as user; else login">
             <i class="fa fa-user-circle"></i>
-            <a class="ml-2">{{ user?.name }}</a>
+            <a class="mr-2">{{ user?.name }}</a>
         </div>
+
+        <ng-tamplate #login>
+            <span class="navbar-text">
+                Please, Login!
+            </span>
+        </ng-tamplet>
     </nav>
 </header>
