--- a/src/app/core/header/header/header.component.html
+++ b/src/app/core/header/header/header.component.html
@@ -10,7 +10,7 @@
 
         <ng-tamplate #login>
             <span class="navbar-text">
-                Please, Login!
+                <a [routerLink]="['']" >Please, Login!</a>
             </span>
         </ng-tamplet>
     </nav>
