--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,17 +1,18 @@
-<header class="sticky-top">
+<header class="fixed-top">
     <nav class="navbar navbar-light bg-white">
         <a class="navbar-brand">ALURAPIC</a>
+
         <div *ngIf="(user$ | async) as user; else login">
             <i class="fa fa-user-circle mr-1"></i>
-            <a class="mr-1">{{ user?.name }}</a>
-            <a class="mr-1">{{ user?.name }}</a>
-            <a (click)="logout()" class="mr-2">(Logout)</a>
+            <a class="mr-1">{{ user.name}}</a>
+            <a (click)="logout()">(Logout)</a>
         </div>
 
-        <ng-tamplate #login>
+        <ng-template #login>
             <span class="navbar-text">
-                <a [routerLink]="['']" >Please, Login!</a>
+                <a [routerLink]="['']">Please, login!</a>
             </span>
-        </ng-tamplet>
+        </ng-template> 
+
     </nav>
 </header>
