--- a/src/app/home/signup/signup/signup.component.html
+++ b/src/app/home/signup/signup/signup.component.html
@@ -1,20 +1,60 @@
 <h4 class="text-center"> Register to embrace a new world!</h4>
-<form  class="form mt-4">
+<form  [formGroup]="signupForm" class="form mt-4">
     <div class="form-group">
-        <input  placeholder="email" class="form-control" autofocus >
-
+        <input formControlName="email" placeholder="email" class="form-control" autofocus >
+        <ap-vmessage 
+            *ngIf="signupForm.get('email').errors?.required"
+            text="Email is required!">
+        </ap-vmessage>   
+        <ap-vmessage 
+            *ngIf="signupForm.get('email').errors?.email"
+            text="Invalid Email!">
+        </ap-vmessage>
     </div>
     <div class="form-group">
-        <input placeholder="full name" class="form-control">
-
+        <input formControlName="fullName" placeholder="full name" class="form-control">
+        <ap-vmessage 
+            *ngIf="signupForm.get('fullName').errors?.required"
+            text="Full Name is required!">
+        </ap-vmessage>   
+        <ap-vmessage 
+            *ngIf="signupForm.get('fullName').errors?.minlength"
+            text="Minimu length 2!">
+        </ap-vmessage>   
+        <ap-vmessage 
+            *ngIf="signupForm.get('fullName').errors?.maxlength"
+            text="Max length 30!">
+        </ap-vmessage>
     </div>
     <div class="form-group">
-        <input placeholder="user name" class="form-control">
-
+        <input formControlName="userName" placeholder="user name" class="form-control">
+        <ap-vmessage 
+            *ngIf="signupForm.get('userName').errors?.required"
+            text="User Name is required!">
+        </ap-vmessage>
+        <ap-vmessage 
+            *ngIf="signupForm.get('userName').errors?.minlength"
+            text="Minimu length 2!">
+        </ap-vmessage>   
+        <ap-vmessage 
+            *ngIf="signupForm.get('userName').errors?.maxlength"
+            text="Max length 40!">
+        </ap-vmessage>   
     </div>
     <div class="form-group">
-        <input type="password" placeholder="password" class="form-control">
-
+        <input formControlName="password" type="password" placeholder="password" class="form-control">
+        <ap-vmessage 
+            *ngIf="signupForm.get('password').errors?.required"
+            text="Password is required!">
+        </ap-vmessage>
+        <ap-vmessage 
+            *ngIf="signupForm.get('password').errors?.minlength"
+            text="Minimu length 8!">
+        </ap-vmessage>   
+        <ap-vmessage 
+            *ngIf="signupForm.get('password').errors?.maxlength"
+            text="Max length 14!">
+        </ap-vmessage>      
     </div>
     <button class="btn btn-primary btn-block">Register</button>
 
